<resources>
    <string name="app_name">crypto noticer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="main_home">Main</string>
    <string name="history">Saved History</string>
    <string name="alert">Alert Set</string>
    <string name="wishlists">Wish Lists</string>
    <string name="news_info">News</string>
</resources>